fixed spacing issue in header

--- a/src/Nav/Nav.css
+++ b/src/Nav/Nav.css
@@ -1,5 +1,5 @@
 .constrain {
-    max-width:  800px;
+    max-width:  1000px;
     margin: 0 auto;
 }
 
